force-app/main/community-template/objects/Community_Template__mdt/Community_Template__mdt.object-meta.xml
<CustomObject>
    <label>Community Template</label>
    <pluralLabel>Community Templates</pluralLabel>
</CustomObject>