force-app/main/community-template/objects/Community_Template__mdt/fields/Community_Name__c.field-meta.xml
<CustomField>
    <fullName>Community_Name__c</fullName>
    <label>Community Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>