force-app/main/community-template/objects/Community_Template__mdt/fields/Community_Template__c.field-meta.xml
<CustomField>
    <fullName>Community_Template__c</fullName>
        <label>Community Template</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                    <default>true</default>
                    <label>Default</label>
                </value>
                <value>
                    <fullName>GSK</fullName>
                </value>
                <value>
                    <fullName>Covid_19</fullName>
                </value>
                <value>
                    <fullName>Janssen</fullName>
                </value>
                <value>
                    <fullName>PatientPortal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
</CustomField>