force-app/main/community-template/objects/Community_Template__mdt/fields/Permission_Set_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Permission_Set_Developer_Name__c</fullName>
    <label>Permission Set Developer Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>