force-app/main/community-template/objects/Community_Template__mdt/fields/ShortCommunityName__c.field-meta.xml
<CustomField>
    <fullName>ShortCommunityName__c</fullName>
    <label>ShortCommunityName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>